<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:id="@+id/beginAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/initial_account"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/startAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/amount" />

        <TextView
            android:id="@+id/finalAccount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/final_account" />

        <TextView
            android:id="@+id/finalAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:text="@string/amount"
            android:textAllCaps="false" />
    </LinearLayout>

    <TextView
        android:id="@+id/emptyTransaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ListView
        android:id="@+id/transactionsList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="80"
            android:orientation="horizontal"></LinearLayout>

        <Button
            android:id="@+id/gotoMyTransactions"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:text="@string/button_gotoMyTransactions" />

    </LinearLayout>

</LinearLayout>