<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_green_light"
    android:orientation="vertical"
    android:weightSum="100">

    <TextView
        android:id="@+id/supplyDemandPayed"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="60"
        android:text="@string/supplyDemand_payed" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="40"
        android:orientation="horizontal"
        android:weightSum="100">

        <TextView
            android:id="@+id/fornameMember"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="35"
            android:text="@string/forname" />

        <TextView
            android:id="@+id/nameMember"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="35"
            android:text="@string/name" />

        <TextView
            android:id="@+id/sign"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="+" />

        <TextView
            android:id="@+id/amount"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:text="100" />

    </LinearLayout>

</LinearLayout>