<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">

    <TextView
        android:id="@+id/authenticationTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:text="@string/authentication_title"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/mobileIdTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:text="@string/authentication_mobileId"/>

    <EditText
        android:id="@+id/mobileIdEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:ems="10"
        android:inputType="textPersonName"/>

    <TextView
        android:id="@+id/mobileIdTextViewError"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:text=""
        android:textColor="@android:color/holo_red_dark" />

    <TextView
        android:id="@+id/cellNumberTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:text="@string/authentication_cellNumber"/>


    <EditText
        android:id="@+id/cellNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:ems="10"
        android:inputType="phone"/>

    <TextView
        android:id="@+id/cellNumberTextViewError"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:text=""
        android:textColor="@android:color/holo_red_dark" />

    <Button
        android:id="@+id/mobileIdValidate"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:text="@string/authentication_button"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical"></LinearLayout>

    <ProgressBar
        android:id="@+id/waiting"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/infoTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:text=""
        android:textAlignment="center" />
</LinearLayout>
