<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:weightSum="100">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="60"
        android:orientation="vertical"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:id="@+id/fornameMember"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:text="@string/forname" />

            <TextView
                android:id="@+id/nameMember"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="50"
                android:text="@string/name" />
        </LinearLayout>

        <TextView
            android:id="@+id/townMember"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:text="@string/town" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/imageButtonlook"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="20"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:focusable="false"
        app:srcCompat="@drawable/look" />

    <ImageButton
        android:id="@+id/imageButtonMap"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="20"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:focusable="false"
        app:srcCompat="@drawable/map" />
</LinearLayout>