<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="100">

    <TextView
        android:id="@+id/titleNFC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="20"
        android:text="@string/wait_nfc"
        android:textAlignment="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="65"
        android:orientation="vertical"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:id="@+id/debtor"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:text="@string/debtor" />

            <TextView
                android:id="@+id/debtorName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="70" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:id="@+id/creditor"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:text="@string/creditor" />

            <TextView
                android:id="@+id/creditorName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="70" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:id="@+id/supplyDemandPayed"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:text="@string/supplyDemand_payed" />

            <TextView
                android:id="@+id/supplyDemandTitle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="70" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="25"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:id="@+id/amount"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:text="@string/amount" />

            <TextView
                android:id="@+id/amountValue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="70" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:orientation="horizontal"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="80"
            android:orientation="horizontal"></LinearLayout>

        <ImageButton
            android:id="@+id/backHome"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/back" />
    </LinearLayout>
</LinearLayout>