<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="100">

    <TextView
        android:id="@+id/supplyDemandCard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"
        android:text="@string/card_supply_demand" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="65"
        android:orientation="vertical"
        android:weightSum="99">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="33"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:id="@+id/type"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:text="@string/type_supply_demand" />

            <TextView
                android:id="@+id/typeValue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="70" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="33"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:id="@+id/category"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:text="@string/category_supply_demand" />

            <TextView
                android:id="@+id/categoryValue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="70" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="33"
            android:orientation="horizontal"
            android:weightSum="100">

            <TextView
                android:id="@+id/title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="30"
                android:text="@string/description_supply_demand" />

            <TextView
                android:id="@+id/titleValue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="70" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:orientation="horizontal"
        android:weightSum="100">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="80"
            android:orientation="vertical"></LinearLayout>

        <ImageButton
            android:id="@+id/updateSupplyDemand"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="20"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/edit" />
    </LinearLayout>
</LinearLayout>